--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Anahit Gulian</title>
+        <title>Anahit says hi</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="public/style.css" />
         <script src="index.js" charset="utf-8"></script>
-        <div>
-            <p>hiiiii</p>
+        <div class="container">
+            <img src="public/assets/fairy.gif" alt="A hovering blue fairy">
+            <div>
+                <p>coming soon *__~</p>
+            </div>
         </div>
     </body>
 </html>
