--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Anahit says hi</title>
+        <link rel="shortcut icon" type="image/jpg" href="public/favicon.ico"/>
         <meta charset="utf-8">
     </head>
     <body>
