--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Anahit Gulian || software engineer || work, about, contact"
     />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <meta name="og:title" property="og:title" content="(✿◠‿◠) || Anahit Gulian">
+    <meta name="og:type" property="og:type" content="website">
+    <meta name="og:description" property="og:description" content="Anahit Gulian || software engineer || work, about, contact">
+    <meta name="og:image" property="og:image" content="%PUBLIC_URL%/fairy.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
