--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>(✿◠‿◠)</title>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -13,11 +13,12 @@
     <meta name="og:title" property="og:title" content="(✿◠‿◠) || Anahit Gulian">
     <meta name="og:type" property="og:type" content="website">
     <meta name="og:description" property="og:description" content="Anahit Gulian || software engineer || work, about, contact">
-    <meta name="og:image" property="og:image" content="%PUBLIC_URL%/fairy.png">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="og:image" property="og:image" content="/fairy.png">
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
-    <link rel="stylesheet" href="%PUBLIC_URL%/style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <div id="root"></div>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
